{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 33,
  "lineage": "7d388847-ee50-40c0-aadb-229a077a10e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:515314795663:internet-gateway/igw-0b4d0de75dc06a574",
            "id": "igw-0b4d0de75dc06a574",
            "owner_id": "515314795663",
            "tags": {
              "Name": "gymrats-igw"
            },
            "tags_all": {
              "Name": "gymrats-igw"
            },
            "vpc_id": "vpc-005f3493e23a2f3ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:515314795663:route-table/rtb-06cbc9a3eeca73a7c",
            "id": "rtb-06cbc9a3eeca73a7c",
            "owner_id": "515314795663",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4d0de75dc06a574",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gymrats-public-rt"
            },
            "tags_all": {
              "Name": "gymrats-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f3493e23a2f3ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2b5b24ec20ed791",
            "route_table_id": "rtb-06cbc9a3eeca73a7c",
            "subnet_id": "subnet-00cc680af8d503b56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045bfffe4dbce9341",
            "route_table_id": "rtb-06cbc9a3eeca73a7c",
            "subnet_id": "subnet-07123eb0b4a5aebc5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:515314795663:security-group/sg-06eb02909558773d4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06eb02909558773d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Express API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "gymrats-backend-sg",
            "name_prefix": "",
            "owner_id": "515314795663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gymrats-backend-sg"
            },
            "tags_all": {
              "Name": "gymrats-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f3493e23a2f3ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:515314795663:security-group/sg-0aa756a432a7181a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa756a432a7181a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gymrats-frontend-sg",
            "name_prefix": "",
            "owner_id": "515314795663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gymrats-frontend-sg"
            },
            "tags_all": {
              "Name": "gymrats-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f3493e23a2f3ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:515314795663:subnet/subnet-00cc680af8d503b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cc680af8d503b56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515314795663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gymrats-public-0"
            },
            "tags_all": {
              "Name": "gymrats-public-0"
            },
            "vpc_id": "vpc-005f3493e23a2f3ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:515314795663:subnet/subnet-07123eb0b4a5aebc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07123eb0b4a5aebc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515314795663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gymrats-public-1"
            },
            "tags_all": {
              "Name": "gymrats-public-1"
            },
            "vpc_id": "vpc-005f3493e23a2f3ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:515314795663:vpc/vpc-005f3493e23a2f3ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0108e2b9f982f93e9",
            "default_route_table_id": "rtb-075e0041fc768a524",
            "default_security_group_id": "sg-0cd56ca3dc647d357",
            "dhcp_options_id": "dopt-04bb6e6f94892144b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005f3493e23a2f3ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075e0041fc768a524",
            "owner_id": "515314795663",
            "tags": {
              "Name": "gymrats-vpc"
            },
            "tags_all": {
              "Name": "gymrats-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}